--- a/Lesson4/Task3/index.html
+++ b/Lesson4/Task3/index.html
@@ -6,10 +6,5 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div>One</div>
-    <div>Two</div>
-    <div>Three</div>
-    <span>One</span> <span>time </span><span>ago</span>
-  </body>
+  <body></body>
 </html>
