--- a/Lesson4/Task3/index.html
+++ b/Lesson4/Task3/index.html
@@ -6,5 +6,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>One</div>
+    <div>Two</div>
+    <div>Three</div>
+    <span>One</span> <span>Time </span><span>Ago</span>
+  </body>
 </html>
