--- a/Lesson4/Task3/index.html
+++ b/Lesson4/Task3/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div>One</div>
-    <div>Two</div>
-    <div>Three</div>
-    <span>One</span> <span>Time </span><span>Ago</span>
+    <div></div>
+    <div></div>
+    <div></div>
+    <span></span><span></span><span></span>
   </body>
 </html>
