--- a/Lesson4/Task3/index.html
+++ b/Lesson4/Task3/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <span></span><span></span><span></span>
+    <div>Div #1</div>
+    <div>Div #2</div>
+    <div>Div #3</div>
+    <span>Snan #1</span><span>Snan #2</span><span>Snan #3</span>
   </body>
 </html>
