--- a/Lesson4/Task3/index.html
+++ b/Lesson4/Task3/index.html
@@ -10,6 +10,6 @@
     <div>Div #1</div>
     <div>Div #2</div>
     <div>Div #3</div>
-    <span>Snan #1</span><span>Snan #2</span><span>Snan #3</span>
+    <p><span>Snan #1</span><span>Snan #2</span><span>Snan #3</span></p>
   </body>
 </html>
