--- a/Lesson4/Task3/index.html
+++ b/Lesson4/Task3/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div>Div #1</div>
     <div>Div #2</div>
     <div>Div #3</div>
-    <p><span>Snan #1</span><span>Snan #2</span><span>Snan #3</span></p>
+    <hr />
+    <span>Snan #1</span>
+    <span>Snan #2</span>
+    <span>Snan #3</span>
   </body>
 </html>
