fix css in file

--- a/Lesson5/Task2/index.html
+++ b/Lesson5/Task2/index.html
@@ -16,7 +16,7 @@
       [data-description] {
         font-size: 24px;
       }
-      [target][blank] {
+      [target][href] {
         color: green;
       }
       [type='text'] {
