--- a/Lesson7/Task2/index.html
+++ b/Lesson7/Task2/index.html
@@ -22,10 +22,10 @@
         color: white;
         background-color: black;
       }
-      li:nth-child(even) {
+      li:nth-child(even) > span {
         margin-left: 16px;
       }
-      .paragraphs:nth-child(odd) > div {
+      p:nth-child(odd) {
         background-color: grey;
       }
     </style>
