--- a/Lesson7/Task2/index.html
+++ b/Lesson7/Task2/index.html
@@ -25,7 +25,8 @@
       li:nth-child(even) > span {
         margin-left: 16px;
       }
-      p:nth-child(odd) {
+      p:nth-child(1),
+      p:nth-child(4) {
         background-color: grey;
       }
     </style>
