--- a/Lesson7/Task5/index.html
+++ b/Lesson7/Task5/index.html
@@ -31,6 +31,9 @@
       .hello {
         background: white;
       }
+      #special {
+        border: 2px solid blue;
+      }
       div > p {
         font-size: 25px;
       }
