--- a/Lesson8/Task3/index.html
+++ b/Lesson8/Task3/index.html
@@ -13,11 +13,11 @@
   </head>
 
   <body>
- <div class="content">I am lerning box model in CSS</div>
- <div class="content">I am lerning box model in CSS</div>
- <div class="content">I am lerning box model in CSS</div>
- <div class="content">I am lerning box model in CSS</div>
- <div class="content">I am lerning box model in CSS</div>
+ <div class="content">I am learning box model in CSS</div>
+ <div class="content">I am learning box model in CSS</div>
+ <div class="content">I am learning box model in CSS</div>
+ <div class="content">I am learning box model in CSS</div>
+ <div class="content">I am learning box model in CSS</div>
 
   </body>
 </html>
