--- a/Lesson8/Task6/index.html
+++ b/Lesson8/Task6/index.html
@@ -13,6 +13,10 @@
   </head>
 
   <body>
- 
+ <div class="rectangle"></div>
+ <div class="oval"></div>
+ <div class="circle"></div>
+ <div class="triangle"></div>
+
   </body>
 </html>
