--- a/Lesson9/Task4/index.html
+++ b/Lesson9/Task4/index.html
@@ -13,9 +13,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header">Header</div>
-    <div class="main">Main</div>
+    <header>Header</header>
+    <main>Main</main>
     <div class="sidebar">Sidebar</div>
-    <div class="footer">Footer</div>
+    <footer>Footer</footer>
   </body>
 </html>
