--- a/Lesson9/Task4/index.html
+++ b/Lesson9/Task4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
   </head>
+
   <body>
-    <header>Header</header>
-    <main>Main</main>
-    <div class="sidebar">Sidebar</div>
-    <footer>Footer</footer>
+    <header class="header">Header</header>
+    <main class="content">Main</main>
+    <aside class="sidebar">Sidebar</aside>
+    <footer class="footer">Footer</footer>
   </body>
 </html>
