--- a/Lesson10/Task1/index.html
+++ b/Lesson10/Task1/index.html
@@ -25,6 +25,19 @@
       .vertical > span {
         background-color: coral;
       }
+      .horizontal {
+        display: flex;
+        height: 50px;
+        justify-content: space-around;
+        align-items: center;
+      }
+      .vertical {
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+      }
     </style>
     <link rel="stylesheet" href="styles.css" />
   </head>
