--- a/Lesson10/Task3/index.html
+++ b/Lesson10/Task3/index.html
@@ -25,7 +25,7 @@
       </header>
       <main class="main">
         <section class="content">
-          <h2 class="text">I can use Flexbox</h2>
+          <h2>I can use Flexbox!!!</h2>
         </section>
 
         <aside class="sidebar">
