--- a/Lesson10/Task3/index.html
+++ b/Lesson10/Task3/index.html
@@ -30,7 +30,7 @@
 
         <aside class="sidebar">
           <h2 class="news">News</h2>
-          <ul>
+          <ul class="text">
             <li class="news_list">News 1</li>
             <li class="news_list">News 2</li>
             <li class="news_list">News 3</li>
