--- a/Lesson10/Task4/index.html
+++ b/Lesson10/Task4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -10,7 +10,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
   </head>
-  <body></body>
+
+  <body>
+    <div class="block block_red"></div>
+    <div class="block block_green"></div>
+    <div class="block block_blue"></div>
+    <div class="block block_yellow"></div>
+    <div class="block block_black"></div>
+  </body>
 </html>
