Do Lesson10 Task1

--- a/Lesson11/Task1/index.html
+++ b/Lesson11/Task1/index.html
@@ -15,14 +15,23 @@
         height: 100px;
         background: coral;
       }
+      .not_displayed {
+        display: none;
+      }
+      .hidden {
+        visibility: hidden;
+      }
+      .visible {
+        visibility: visible;
+      }
     </style>
   </head>
 
   <body>
     <div class="container">
-      <div>Not Displayed</div>
-      <div>Hiddnen</div>
-      <div>Visible</div>
+      <div class="not_displayed">Not Displayed</div>
+      <div class="hidden">Hiddnen</div>
+      <div class="visible">Visible</div>
     </div>
   </body>
 </html>
