--- a/Lesson17/Task1/index.html
+++ b/Lesson17/Task1/index.html
@@ -15,7 +15,7 @@
     <div>
       <table>
         <caption>
-          Shoping List
+          Shopping List
         </caption>
         <thead>
           <tr>
