--- a/Lesson19/Task2/index.html
+++ b/Lesson19/Task2/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Animation</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -9,7 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
   </head>
-  <body></body>
+
+  <body>
+    <div class="square"></div>
+  </body>
 </html>
