--- a/Lesson19/Task3/index.html
+++ b/Lesson19/Task3/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Images</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -9,7 +10,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
   </head>
-  <body></body>
+
+  <body>
+    <div class="container">
+      <div class="spinner">
+        <span class="spinner-text">Loading...</span>
+        <div class="rect"></div>
+      </div>
+    </div>
+  </body>
 </html>
