Do Lesson21 Task2

--- a/Lesson21/Task2/index.html
+++ b/Lesson21/Task2/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>2D Transformation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -13,7 +12,17 @@
   </head>
 
   <body>
-    <div class="square"></div>
-    <p>I am a text under the square</p>
+    <main class="content">
+      <section class="gallery">
+        <img
+          class="image"
+          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson21/task2/nature.jpeg"
+          alt="Land"
+        />
+      </section>
+      <aside class="ideas">
+        <span class="idea">Keep calm</span>
+      </aside>
+    </main>
   </body>
 </html>
