--- a/Lesson22/Task3/index.html
+++ b/Lesson22/Task3/index.html
@@ -15,21 +15,9 @@
   <body>
     <main>
       <picture>
-        <source
-          srcset="
-            https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg
-          "
-          media="(min-width: 401px)"
-        />
-        <source
-          srcset="
-            https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/small.jpg
-          "
-        />
-        <img
-          src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg"
-          alt="Tree on the land"
-        />
+        <source srcset="big.jpeg" media="(min-width: 401px)" />
+        <source srcset="small.jpeg" />
+        <img src="./big.jpeg" alt="Tree on the land" />
       </picture>
     </main>
   </body>
