--- a/Lesson22/Task5/index.html
+++ b/Lesson22/Task5/index.html
@@ -51,7 +51,9 @@
             alt="Clouds"
           />
         </picture>
-        <p>There are few ways to define <code>font-size</code>:</p>
+        <p class="section__text">
+          There are few ways to define <code>font-size</code>:
+        </p>
         <ul class="units-list">
           <li class="units-list-item">
             <span class="css-units">px</span> are good if you need strict
