--- a/Lesson22/Task5/index.html
+++ b/Lesson22/Task5/index.html
@@ -30,23 +30,21 @@
       </nav>
       <section class="section">
         <h2 class="section__header">True story</h2>
-        <picture class="images">
+        <picture>
           <source
-            class="images__big"
             media="(min-width: 600px)"
             srcset="
               https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png
             "
           />
           <source
-            class="images__small"
             srcset="
               https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/small.png
             "
           />
 
           <img
-            class="images__big"
+            class="section__images"
             src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png"
             alt="Clouds"
           />
