--- a/Lesson23/Task1/index.html
+++ b/Lesson23/Task1/index.html
@@ -2,18 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>2D Transformation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SASS</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-
   <body>
-    <div class="square"></div>
-    <p>I am a text under the square</p>
+    <header class="header">
+      <nav class="header__navigation">
+        <ul class="nav-list">
+          <li class="nav-list__item">Home</li>
+          <li class="nav-list__item nav-list__item_selected">Products</li>
+          <li class="nav-list__item">Contacts</li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
